se agregó contenido

--- a/calculadora.html
+++ b/calculadora.html
@@ -8,4 +8,20 @@
 <body>
     <h1>Calculadora</h1>
 </body>
+
+<!--input´s para recibir las variables -->
+<label for="a">ingrese el primer número</label>
+<input type="number" name="a" id="a"><br>
+
+
+<label for="b">ingrese el segundo número</label>
+<input type="number" name="a" id="b"><br>
+
+<!--botón de función sumar-->
+<button>sumar</button><br>
+
+<!--resultado-->
+<label for="resultado">resultado de la suma</label>
+<input type="number" name="resultado" id="resultado">
+
 </html>
