--- a/calculadora.html
+++ b/calculadora.html
@@ -13,9 +13,11 @@
 <label for="a">ingrese el primer número</label>
 <input type="number" name="a" id="a"><br>
 
-
 <label for="b">ingrese el segundo número</label>
-<input type="number" name="a" id="b"><br>
+<input type="number" name="a" id="a"><br>
+
+<label for="c">ingrese el tercer número</label>
+<input type="number" name="c" id="c"><br>
 
 <!--botón de función sumar-->
 <button>sumar</button><br>
@@ -23,5 +25,47 @@
 <!--resultado-->
 <label for="resultado">resultado de la suma</label>
 <input type="number" name="resultado" id="resultado">
+
+<script>
+
+function sumar(){
+    var a = document.getElementById("a").value ;
+    var b = document.getElementById("b").value ;
+    var c = document.getElementById("c").value ;
+
+    // definimos la variable de salida
+    var resultado;
+
+    resultado = a + b;
+
+    document.getElementById("resultado").value = resultado);
+
+    console.log(a)
+    console.log(b)
+    console.log(c)
+
+    //verificar si las casillas de las variables están en blanco
+    if(a ==""){
+        a = 0;
+    }else{
+        a = parseInt( a );
+    }
+
+    if(b == ""){
+        b= parseInt( b );
+    }
+    if(c == ""){
+        c= 0;
+    }else{
+        c = parseInt( c );
+    }
+
+    //se realiza la suma 
+    resultado = a + b + c;
+ 
+    //mostramos el resultado 
+} 
+
+</script>
 
 </html>
