--- a/calculadora.html
+++ b/calculadora.html
@@ -20,7 +20,7 @@
 <input type="number" name="c" id="c"><br>
 
 <!--botón de función sumar-->
-<button>sumar</button><br>
+<button onclick="sumar()">sumar</button><br>
 
 <!--resultado-->
 <label for="resultado">resultado de la suma</label>
@@ -28,44 +28,16 @@
 
 <script>
 
-function sumar(){
-    var a = document.getElementById("a").value ;
-    var b = document.getElementById("b").value ;
-    var c = document.getElementById("c").value ;
+    function sumar(){
+        var a = document.getElementById("a").value;
+        var b = document.getElementById("b").value;
+        var c = document.getElementById("c").value;
+        var resultado;
 
-    // definimos la variable de salida
-    var resultado;
+        resultado a + b + c;
 
-    resultado = a + b;
+        document.getElementById("resultado") = resultado;
 
-    document.getElementById("resultado").value = resultado);
-
-    console.log(a)
-    console.log(b)
-    console.log(c)
-
-    //verificar si las casillas de las variables están en blanco
-    if(a ==""){
-        a = 0;
-    }else{
-        a = parseInt( a );
     }
-
-    if(b == ""){
-        b= parseInt( b );
-    }
-    if(c == ""){
-        c= 0;
-    }else{
-        c = parseInt( c );
-    }
-
-    //se realiza la suma 
-    resultado = a + b + c;
- 
-    //mostramos el resultado 
-} 
-
 </script>
-
 </html>
